--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="star">
                     <div class="orbit orbit-1"></div>
                     <div class="orbit orbit-2"></div>
-                    <!--<div class="orbit orbit-3"></div>-->
+                    <div class="orbit orbit-3"></div>
                 </div>
             </div>
             <div id="slogan">
