--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                 <h2><em>Vestigo</em></h2>
                 <p>Enter into the world of <em>Vestigo</em>, a mystery game designed to test your wits to solve an intriguing murder mystery. Set in 1917 Hamburg, Germany, it is up to you to discover and track down the culprit of a murder using the information you find in the crime scene.</p>
             </div>
-            <div class="image">
-                
-            </div>
+            <div class="image"></div>
         </section>
         <section id="contact">
             <h1>Contact Us</h1>
