--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astrum Games</title>
+    <title>Astrum Studios</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="container">
         <nav class="navbar">
-            <p class="title">ASTRUM GAMES</p>
+            <p class="title">ASTRUM STUDIOS</p>
             <ul>
                 <li><a href="#home">Welcome</a></li>
                 <li><a href="#about">About Us</a></li>
@@ -26,13 +26,13 @@
                 </div>
             </div>
             <div id="slogan">
-                <h1>Welcome to</h1><h1>Astrum Games!</h1>
+                <h1>Welcome to</h1><h1>Astrum Studios!</h1>
             </div>
         </section>
         <section id="about">
            <div class="box">
                 <h2>About Us</h2>
-                <p>We are Astrum Games, a dedicated group of up-and-coming young programmers and artists. Based in Ottawa, we uphold the highest standards of quality. Our first game, <em>Vestigo</em>, is<br>now free!</p>
+                <p>We are Astrum Studios, a dedicated group of up-and-coming young programmers and artists. Based in Ottawa, we uphold the highest standards of quality. Our first game, <em>Vestigo</em>, is<br>now free!</p>
            </div>
            <div class="box">
                 <h2>Our Promise</h2>
