--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <section id="about">
            <div class="box">
                 <h2>About Us</h2>
-                <p>We are Astrum Studios, a dedicated group of up-and-coming young programmers and artists. Based in Ottawa, we uphold the highest standards of quality. Our first game, <em>Vestigo</em>, is<br>now free!</p>
+                <p>We are Astrum Studios, a dedicated group of up-and-coming young programmers and artists. Based in Ottawa, we uphold the highest standards of quality. Our first game (definately not our last), <em>Vestigo</em>, is now free to download!</p>
            </div>
            <div class="box">
                 <h2>Our Promise</h2>
-                <p>Never to succumb to the evils of microtransactions, overpriced DLCs, lootboxes, pay-to-win gameplay, having better trailer graphics than in-game, adding battle-royales<br>for no reason...</p>
+                <p>Never to succumb to the evils of microtransactions, overpriced DLCs, lootboxes, pay-to-win gameplay, having better trailer graphics than in-game, adding battle-royales for no reason, lying before official release...</p>
            </div>
         </section>
         <section id="game">
