--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            </div>
            <div class="box">
                 <h2>Our Promise</h2>
-                <p>Never to succumb to the evils of microtransactions, overpriced DLCs, lootboxes, pay-to-win gameplay, having better trailer graphics than in-game, adding battle-royales for no damn reason, lying before official release...</p>
+                <p>Never to succumb to the evils of microtransactions, overpriced DLCs, lootboxes, pay-to-win gameplay, having better trailer graphics than in-game, adding battle-royales for no damn reason, delaying official release...</p>
            </div>
         </section>
         <section id="game">
